[package]
name = "sega_cmp"
version = "0.2.0"
edition = "2018"
authors = [
    "Misty De Meo <mistydemeo@gmail.com>",
    "MrConan1",
]
license = "LGPL-3.0"
description = "Library to compress data using Sega's CMP format"
homepage = "https://github.com/studio-lucia/sega_cmp"
repository = "https://github.com/studio-lucia/sega_cmp"
build = "build.rs"
include = ["src/lib.rs", "Cargo.toml", "build.rs", "compress_rtns.*"]

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2.36"
